# openflo-public

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  environment.yml  openflo-gui.bat  openflo-gui.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup.bat  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.gpu  Dockerfile.rapids  README.md
docs/: RAPIDS_SHIM.md  algorithms.md
scripts/: analysis_config.example.json  bench_accelerators.py  diagnose.bat  diagnose.sh  make_synthetic_dataset.py  migrate_session.py  preflight.py  run_analyses.py  smoke_test.py
src/openflo/: __init__.py  _golden.json  annotate.py  async_task.py  audit.py  calibration.py  capabilities.py  cli.py  comp_qc.py  compare.py  compliance.py  density.py  diagnostics.py  diffexp.py  dr_compare.py  editor_analysis.py  editor_audit.py  editor_autoclean.py  editor_autogate.py  editor_base.py  editor_channels.py  editor_chrome.py  editor_clipboard.py  editor_compute.py  editor_console.py  editor_dnd.py  editor_downsample.py  editor_export.py  editor_figure.py  editor_gatetools.py  editor_gating.py  editor_grouping.py  editor_help.py  editor_lifecycle.py  editor_load.py  editor_loadpool.py  editor_menu.py  editor_mode.py  editor_plot.py  editor_populations.py  (+66 more)
src/openflo/template_library/: README.md  cleanup_acquisition_qc.json  cleanup_minimal.json  cleanup_standard.json  cleanup_strict.json  example_panel.json
templates/: testtemplate.json
tests/: conftest.py  test_abscounts.py  test_annotate.py  test_apply_region_gates.py  test_async_task.py  test_audit.py  test_autoclean_counts.py  test_autoclean_methods.py  test_autogate.py  test_calibration.py  test_capabilities.py  test_cell_cycle.py  test_cli_cluster.py  test_cli_e2e.py  test_cli_unmix.py  test_cluster_reproducible.py  test_comp_editor.py  test_comp_qc.py  test_compare_all.py  test_compensation.py  test_compliance.py  test_cytonorm.py  test_density.py  test_diagnostics.py  test_diffabundance.py  test_diffexp.py  test_dr_compare.py  test_editor_mixins.py  test_ellipsoid_quadrant.py  test_embedding.py  test_embeddings.py  test_exceptions.py  test_fcs_export.py  test_figure_layout.py  test_flowsom.py  test_flowsom_mst.py  test_gate_editor_helpers.py  test_gate_import_fixes.py  test_gatetree.py  test_gating.py  (+47 more)
